--- a/Rampup/Rampup_Online_Oct23_T1.ipynb
+++ b/Rampup/Rampup_Online_Oct23_T1.ipynb
@@ -43,19 +43,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nombre = \"\"\n",
-    "apellidos = \"\""
+    "nombre = \"María\"\n",
+    "apellidos = \"Sanabria Vals\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hola, María Sanabria Vals, mucho ánimo. Solo hay victorias o aprendizajes.\n",
+      "Y recuerda que nos dirá más de tu capacidad de desarrollar código cualquier cosa que escribas que una celda vacía.\n",
+      "Ah, María y no hay límites al número de celdas que quieras usar.\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"Hola, {nombre} {apellidos}, mucho ánimo. Solo hay victorias o aprendizajes.\")\n",
     "print(\"Y recuerda que nos dirá más de tu capacidad de desarrollar código cualquier cosa que escribas que una celda vacía.\")\n",
@@ -90,10 +100,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yo, María Sanabria Vals, te regalo este cuadro a ti, Teresa\n"
+     ]
+    }
+   ],
+   "source": [
+    "edad = 26\n",
+    "altura = 1.78\n",
+    "pertenencias = [\"anillo\", \"collar\", \"cuadro\", \"equipo de música\"]\n",
+    "valor = [1000,500,3000,200]\n",
+    "personas_cercanas = (\"Teresa\", \"Antonio\", \"Jorge\")\n",
+    "regalo = pertenencias[2]\n",
+    "para = personas_cercanas[0]\n",
+    "preferidas = pertenencias[0:2]\n",
+    "print(f\"Yo, {nombre} {apellidos}, te regalo este {regalo} a ti, {para}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -116,10 +144,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['anillo', 'collar', 'cuadro', 'equipo de música']\n",
+      "anillo;collar;cuadro;equipo de música\n",
+      "[0, 1, 2, 3]\n",
+      "['Teresa', 'Antonio', 'Jaime']\n",
+      "('Teresa', 'Antonio', 'Jaime')\n",
+      "['anillo', 'collar', 'cuadro', 'equipo de música', 'anillo', 'collar', 'cuadro', 'equipo de música']\n",
+      "A ti, Jaime te regalo mi equipo de música y el cuadro que compré en Granada\n",
+      "['anillo', 'collar', 'anillo', 'collar']\n",
+      "Aquí tiene su Ticket para el Tren del Terror\n",
+      "Aquí tiene su Ticket para Alicia\n"
+     ]
+    }
+   ],
+   "source": [
+    "#APARTADO 1\n",
+    "\n",
+    "cosas_ordenadas = sorted(pertenencias)\n",
+    "print(cosas_ordenadas)\n",
+    "\n",
+    "#APARTADO 2\n",
+    "print(\";\".join(cosas_ordenadas))\n",
+    "\n",
+    "#APARTADO 3\n",
+    "\n",
+    "valor_ordenado = []\n",
+    "\n",
+    "for cosa in cosas_ordenadas:\n",
+    "    indice = pertenencias.index(cosa)\n",
+    "    valor_ordenado.append(indice)\n",
+    "print(valor_ordenado)\n",
+    "\n",
+    "\n",
+    "\n",
+    "#APARTADO 4\n",
+    "\n",
+    "lista_personas_cercanas = list(personas_cercanas)\n",
+    "lista_personas_cercanas[2] = \"Jaime\"\n",
+    "print(lista_personas_cercanas)\n",
+    "vuelta_a_tupla = tuple(lista_personas_cercanas)\n",
+    "print(vuelta_a_tupla)\n",
+    "\n",
+    "#APARTADO 5\n",
+    "\n",
+    "duplicar_pertenencias = pertenencias + pertenencias\n",
+    "print(duplicar_pertenencias)\n",
+    "\n",
+    "#APARTADO 6\n",
+    "\n",
+    "print(f\"A ti, {vuelta_a_tupla[2]} te regalo mi {pertenencias[3]} y el {pertenencias[2]} que compré en Granada\")\n",
+    "\n",
+    "#APARTADO 7\n",
+    "#Eliminar cuadro y equipo de música de la duplicada:\n",
+    "    #Una primera forma de borrar:\n",
+    "\n",
+    "lista_nueva_objetos = []\n",
+    "objetos_eliminados = [\"cuadro\", \"equipo de música\"]\n",
+    "for i in duplicar_pertenencias:\n",
+    "    if i not in objetos_eliminados:\n",
+    "        lista_nueva_objetos.append(i)\n",
+    "print(lista_nueva_objetos)\n",
+    "\n",
+    "#APARTADO 8\n",
+    "\n",
+    "if altura > 1.50 and edad > 15:\n",
+    "    print(\"Aquí tiene su Ticket para el Tren del Terror\")\n",
+    "else:\n",
+    "    print(\"No puedes montarte en la atracción.\")\n",
+    "\n",
+    "if altura < 1.90 and edad < 35:\n",
+    "    print(\"Aquí tiene su Ticket para Alicia\")\n",
+    "else:\n",
+    "    print(\"No puedes montarte en la atracción.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -143,10 +247,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'años': 10,\n",
+      " 'etapa de la vida': 'Infancia',\n",
+      " 'motivo': 'fantasia',\n",
+      " 'pelicula favorita': 'Aladdin'}\n",
+      "{'años': 16,\n",
+      " 'etapa de la vida': 'Adolescencia',\n",
+      " 'motivo': 'romantiqueo malo pero malo malo',\n",
+      " 'pelicula favorita': '3MSC'}\n",
+      "{'años': 25,\n",
+      " 'etapa de la vida': 'Juventud',\n",
+      " 'motivo': 'Almodóvar es maravilloso',\n",
+      " 'pelicula favorita': 'Volver'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pprint\n",
+    "diccionario = {}\n",
+    "diccionario[\"etapa de la vida\"] = \"\"\n",
+    "diccionario[\"años\"] = 26\n",
+    "diccionario[\"pelicula favorita\"] = \"Shrek\"\n",
+    "diccionario[\"motivo\"] = \"fantasía\"\n",
+    "lista_peliculas = []\n",
+    "\n",
+    "lista_peliculas.append({\"etapa de la vida\": \"Infancia\", \"años\":10, \"pelicula favorita\": \"Aladdin\", \"motivo\": \"fantasia\"})\n",
+    "lista_peliculas.append({\"etapa de la vida\": \"Adolescencia\", \"años\":16, \"pelicula favorita\": \"3MSC\", \"motivo\": \"romantiqueo malo pero malo malo\"})\n",
+    "lista_peliculas.append({\"etapa de la vida\": \"Juventud\", \"años\":25, \"pelicula favorita\": \"Volver\", \"motivo\": \"Almodóvar es maravilloso\"})\n",
+    "\n",
+    "for pelicula in lista_peliculas:\n",
+    "    pprint.pprint(pelicula)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -185,10 +323,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: '' no es un número válido.\n"
+     ]
+    }
+   ],
+   "source": [
+    "peticion_num = input(\"Dame una serie de números\")\n",
+    "peticion_operacion = input(\"¿Quiere multiplicar o sumar?\").lower()\n",
+    "\n",
+    "lista_peticion_str = peticion_num.split(\",\")\n",
+    "numeros = []\n",
+    "for numero_str in lista_peticion_str:\n",
+    "    try:\n",
+    "        numero = float(numero_str)\n",
+    "        numeros.append(numero)\n",
+    "    except ValueError:\n",
+    "        print(f\"Error: '{numero_str}' no es un número válido.\")\n",
+    "if peticion_operacion == \"multiplicar\":\n",
+    "    producto = 1\n",
+    "    for num in numeros:\n",
+    "        producto *= num          #Quisiera hacer la segunda parte de la división y se me ocurre con algo como añadir aquí \"/ numeros[len(numeros)-1])\" para que divida entre el último número de la lista pero no me sale.\n",
+    "    print(producto)\n",
+    "elif peticion_operacion == \"sumar\":\n",
+    "    suma = sum(numeros)\n",
+    "    print(suma)\n",
+    "    \n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -201,10 +369,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "while True:   \n",
+    "    peticion_num = input(\"Dame una serie de números\")\n",
+    "    peticion_operacion = input(\"¿Quiere multiplicar o sumar? Si desea salir, escriba 'exit'\").lower()\n",
+    "\n",
+    "    if peticion_operacion == \"exit\":\n",
+    "            print(\"Hasta luego, Lucas\")\n",
+    "            break\n",
+    "    lista_peticion_str = peticion_num.split(\",\")\n",
+    "    numeros = []\n",
+    "    for numero_str in lista_peticion_str:\n",
+    "        try:\n",
+    "            numero = float(numero_str)\n",
+    "            numeros.append(numero)\n",
+    "        except ValueError:\n",
+    "            print(f\"Error: '{numero_str}' no es un número válido.\")\n",
+    "    if peticion_operacion == \"multiplicar\":\n",
+    "            producto = 1\n",
+    "            for num in numeros:\n",
+    "                producto *= num          #Quisiera hacer la segunda parte de la división y se me ocurre con algo como añadir aquí \"/ numeros[len(numeros)-1])\" para que divida entre el último número de la lista pero no me sale.\n",
+    "            print(producto)\n",
+    "    elif peticion_operacion == \"sumar\":\n",
+    "            suma = sum(numeros)\n",
+    "            print(suma)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -234,8 +426,49 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'autora': 'Toni Morrison', 'esta_viva': False, 'premio_nobel': True},\n",
+      " {'autora': 'Dolores Redondo', 'esta_viva': True, 'premio_nobel': False},\n",
+      " {'autora': 'Margaret Atwood', 'esta_viva': True, 'premio_nobel': False},\n",
+      " {'autora': 'Gabriela Mistral', 'esta_viva': False, 'premio_nobel': True},\n",
+      " {'autora': 'Alice Munro', 'esta_viva': True, 'premio_nobel': True},\n",
+      " {'autora': 'Agatha Christie', 'esta_viva': False, 'premio_nobel': False},\n",
+      " {'autora': 'Carmen Laforet', 'esta_viva': False, 'premio_nobel': False}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pprint\n",
+    "escritoras = [\"Toni Morrison\", \"Dolores Redondo\", \"Margaret Atwood\", \"Gabriela Mistral\", \"Alice Munro\", \"Agatha Christie\", \"Carmen Laforet\"]\n",
+    "nobel = [True, False, False, True, True, False, False]\n",
+    "viva = [False, True, True, False, True, False, False]\n",
+    "\n",
+    "escritoras_ilustres = []\n",
+    "\n",
+    "for escritora, tiene_nobel, esta_viva in zip(escritoras, nobel, viva):\n",
+    "    escritora_dict = {\n",
+    "        'autora': escritora,\n",
+    "        'premio_nobel': tiene_nobel,\n",
+    "        'esta_viva': esta_viva\n",
+    "    }\n",
+    "    escritoras_ilustres.append(escritora_dict)\n",
+    "\n",
+    "pprint.pprint(escritoras_ilustres)\n",
+    "\n",
+    "peticion_autora = input(\"¿De qué autora quieres saber?\")\n",
+    "def ganadoras (premio):\n",
+    "    encontrado = False\n",
+    "    for autora in escritoras_ilustres:\n",
+    "        if autora.lower() == peticion_autora.lower():\n",
+    "            encontrado = True\n",
+    "            print()\n",
+    "\n",
+    "#NO ME DA TIEMPOOOOOOOOOOOOOO!!!!"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -408,7 +641,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
