--- a/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_01/Practica_Obligatoria/18_Practica_Obligatoria_Algebra_Numpy.ipynb
+++ b/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_01/Practica_Obligatoria/18_Practica_Obligatoria_Algebra_Numpy.ipynb
@@ -92,10 +92,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[6 5 3 1]\n",
+      " [3 6 2 2]\n",
+      " [3 4 3 1]]\n",
+      "[[ 1.5  1. ]\n",
+      " [ 2.   2.5]\n",
+      " [ 5.   4.5]\n",
+      " [16.  17. ]]\n",
+      "[[50.  49. ]\n",
+      " [58.5 61. ]\n",
+      " [43.5 43.5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "cantidades = [[6,5,3,1],\n",
+    "            [3,6,2,2], \n",
+    "            [3,4,3,1]]\n",
+    "\n",
+    "precios = [[1.5,1],\n",
+    "            [2, 2.5],\n",
+    "            [5,4.5],\n",
+    "            [16,17]]\n",
+    "\n",
+    "\n",
+    "cantidades_np = np.array(cantidades)\n",
+    "precios_np = np.array(precios)\n",
+    "\n",
+    "print(cantidades_np)\n",
+    "print(precios_np)\n",
+    "\n",
+    "# Producto matricial\n",
+    "\n",
+    "producto = cantidades_np.dot(precios_np)\n",
+    "print(producto)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mejor que compres en Starbucks\n",
+      "Mejor que compres en Manolo Bakes\n",
+      "Da igual dónde compres\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "precios = np.array(producto)\n",
+    "\n",
+    "#Iniciar un bucle que vaya por cada persona(fila) y cada precio de la tienda (columna)\n",
+    "for persona, precios_tienda in enumerate(precios):\n",
+    "    manolo, starbucks = precios_tienda\n",
+    "\n",
+    "    if manolo == starbucks:\n",
+    "        print(\"Da igual dónde compres\")\n",
+    "    elif manolo < starbucks:\n",
+    "        print(\"Mejor que compres en Manolo Bakes\")\n",
+    "    elif manolo > starbucks:\n",
+    "        print(\"Mejor que compres en Starbucks\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -108,7 +186,22 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "$$ \\text{Matriz de Precios: } \\begin{bmatrix} 50.0 & 49.0 \\\\ 58.5 & 61.0 \\\\ 43.5 & 43.5 \\end{bmatrix} $$\n",
+    "\n",
+    "1. Para cada persona en la matriz de precios:\n",
+    "   - Extraer los precios de las tiendas (fila actual de la matriz).\n",
+    "   - Comparar los precios y mostrar una recomendación.\n",
+    "   \n",
+    "- Para Rafa:\n",
+    "  $$ \\text{Mejor que compres en Manolo Bakes} $$\n",
+    "\n",
+    "- Para Nacho:\n",
+    "  $$ \\text{Mejor que compres en Starbucks} $$\n",
+    "\n",
+    "- Para Clara:\n",
+    "  $$ \\text{Mejor que compres en Starbucks} $$\n"
+   ]
   },
   {
    "attachments": {
@@ -146,10 +239,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#[Acción,  Aventura , Animación, Comedia, Romance] Le voy a asignar el valor 1 si está el género en la peli y 0 si no está. Así se puede crear una matriz donde cada peli tiene 5 elementos\n",
+    "\n",
+    "#Toy_Story = [Aventura, Animación, Comedia]\n",
+    "Toy_Story = np.array([0,1,1,1,0])\n",
+    "#Jumanji = [Aventura]\n",
+    "Jumanji = np.array([0,1,0,0,0])\n",
+    "#Mortal_Kombat = [Acción, Aventura]\n",
+    "Mortal_Kombat = np.array([1,1,0,0,0])\n",
+    "#Pocahontas = [Animación, Romance]\n",
+    "Pocahontas = np.array([0,0,1,0,1])\n",
+    "\n",
+    "diccionario = {\n",
+    "    \"Toy Story\": Toy_Story,\n",
+    "    \"Jumanji\": Jumanji,\n",
+    "    \"Mortal Kombat\": Mortal_Kombat,\n",
+    "    \"Pocahontas\": Pocahontas\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.7320508075688772 1.0\n",
+      "1\n",
+      "0.5773502691896258\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "#Similitud por el coseno (para aplicar la fórmula hace falta saber la longitud o norma de los vectores y el producto escalar)\n",
+    "\n",
+    "\n",
+    "    # Norma o longitud o magnitud\n",
+    "\n",
+    "norm_Toy_Story = np.linalg.norm(Toy_Story)\n",
+    "norm_Jumanji = np.linalg.norm(Jumanji)\n",
+    "print(norm_Toy_Story, norm_Jumanji)\n",
+    "\n",
+    "    #Producto escalar de los vectores\n",
+    "    \n",
+    "dot_product_ToyStory_Jumanji = np.dot(Toy_Story, Jumanji)\n",
+    "print(dot_product_ToyStory_Jumanji)\n",
+    "\n",
+    "# Coseno del ángulo = producto escalar de los vectores / suma de normas de los vectores \n",
+    "\n",
+    "cos_ang_ToyStory_Jumanji = dot_product_ToyStory_Jumanji/(norm_Toy_Story * norm_Jumanji)\n",
+    "print(cos_ang_ToyStory_Jumanji)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Similitud entre Toy Story y Jumanji: 0.5773502691896258\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Representar cada película como un vector\n",
+    "vector_toy_story = np.array([0, 1, 1, 1, 0])  # Aventura, Animación, Comedia\n",
+    "vector_jumanji = np.array([0, 1, 0, 0, 0])  # Aventura\n",
+    "vector_mortal_kombat = np.array([1, 1, 0, 0, 0])  # Acción, Aventura\n",
+    "vector_pocahontas = np.array([0, 0, 1, 0, 1])  # Animación, Romance\n",
+    "\n",
+    "# Calcular similitud del coseno manualmente usando las fórmulas proporcionadas\n",
+    "dot_product_toy_story_jumanji = np.dot(vector_toy_story, vector_jumanji)\n",
+    "norm_toy_story = np.linalg.norm(vector_toy_story)\n",
+    "norm_jumanji = np.linalg.norm(vector_jumanji)\n",
+    "\n",
+    "cos_ang_toy_story_jumanji = dot_product_toy_story_jumanji / (norm_toy_story * norm_jumanji)\n",
+    "\n",
+    "# Mostrar resultado\n",
+    "print(f\"Similitud entre Toy Story y Jumanji: {cos_ang_toy_story_jumanji}\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -162,10 +344,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 1 1 0]\n",
+      " [0 1 0 0 0]\n",
+      " [1 1 0 0 0]\n",
+      " [0 0 1 0 1]]\n",
+      "2\n",
+      "(4, 5)\n",
+      "20\n",
+      "int32\n"
+     ]
+    }
+   ],
+   "source": [
+    "# toma los valores del diccionario (que son arrays o vectores) y los convierte en una lista. Esto es necesario porque np.vstack espera una secuencia de arrays.\n",
+    "matriz_peliculas = np.vstack(list(diccionario.values()))\n",
+    "\n",
+    "print(matriz_peliculas)\n",
+    "\n",
+    "#Dimension (dimensiones que contempla, en este caso filas y columnas(bidimensional))\n",
+    "\n",
+    "print(matriz_peliculas.ndim)\n",
+    "\n",
+    "#Shape = Formato (filas, columnas)\n",
+    "\n",
+    "print(matriz_peliculas.shape) \n",
+    "\n",
+    "#Tamaño #En este caso filas x columnas (4x5)\n",
+    "\n",
+    "print(matriz_peliculas.size)\n",
+    "\n",
+    "#Tipo de array \n",
+    "\n",
+    "print(matriz_peliculas.dtype)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -196,7 +414,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Wall_E = [0,1,1,1,0]\n"
+   ]
   }
  ],
  "metadata": {
@@ -206,8 +426,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.4"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
