--- a/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_01/Ejercicios_Workout/11_Ejercicios_Hello_Numpy.ipynb
+++ b/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_01/Ejercicios_Workout/11_Ejercicios_Hello_Numpy.ipynb
@@ -66,10 +66,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
   },
   {
    "attachments": {
@@ -94,10 +96,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Distancia entre el vector 1 y el vector 2: 7.3484692283495345\n",
+      "Distancia entre el vector 1 y el vector 3: 8.831760866327848\n",
+      "Distancia entre el vector 2 y el vector 3: 13.638181696985855\n"
+     ]
+    }
+   ],
+   "source": [
+    "def distancia_entre_vectores(lista_vectores):\n",
+    "    # Verificar si todos los vectores tienen el mismo número de dimensiones\n",
+    "    dimensiones = len(lista_vectores[0])\n",
+    "    if not all(len(vector) == dimensiones for vector in lista_vectores):\n",
+    "        print(\"No es posible hallar la distancia. Los vectores tienen diferente número de dimensiones.\")\n",
+    "        return\n",
+    "    \n",
+    "    # Convertir la lista de vectores a un array de NumPy\n",
+    "    matriz_vectores = np.array(vectores)\n",
+    "    \n",
+    "    # Iterar sobre cada par de vectores y calcular la distancia\n",
+    "    for i in range(len(matriz_vectores)):\n",
+    "        for j in range(i + 1, len(matriz_vectores)):\n",
+    "            vector1 = matriz_vectores[i]\n",
+    "            vector2 = matriz_vectores[j]\n",
+    "            \n",
+    "            distancia = np.linalg.norm(vector1 - vector2)\n",
+    "            \n",
+    "            print(f\"Distancia entre el vector {i + 1} y el vector {j + 1}: {distancia}\")\n",
+    "vectores = [\n",
+    "np.array([1,2,3,4]), \n",
+    "np.array([3,5,7,9]),\n",
+    "np.array([-3,-5,6,2])]\n",
+    "\n",
+    "distancia_entre_vectores(vectores)\n"
+   ]
   },
   {
    "attachments": {
@@ -122,24 +160,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No es posible hallar la distancia. Los vectores tienen diferente número de dimensiones.\n"
+     ]
+    }
+   ],
    "source": [
-    "vec1 = [12,-4,3,0, 3.5]\n",
-    "vec2 = [1, 3, -0.33, -12.1]\n",
-    "vec3 = [1,0,-4]\n",
-    "vec3 = [-2,0,-1,0]\n",
-    "vec4 = [0,0,1,1]\n",
-    "lista_vectores = [vec1,vec2,vec3,vec4]\n"
+    "vec1 = np.array([12,-4,3,0, 3.5]) #dimension = 5\n",
+    "vec2 = np.array([1, 3, -0.33, -12.1]) #dimension = 4\n",
+    "vec3 = np.array([1,0,-4]) #D=3\n",
+    "vec3 = np.array([-2,0,-1,0])  #D = 4\n",
+    "vec4 = np.array([0,0,1,1]) #D = 4\n",
+    "lista_vectores = [vec1,vec2,vec3,vec4]\n",
+    "\n",
+    "distancia_entre_vectores(lista_vectores)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "attachments": {
@@ -164,10 +205,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.31622776601683794"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def coseno_angulo(v1, v2):\n",
+    "    norm_v1 = np.linalg.norm(v1)\n",
+    "    norm_v2 = np.linalg.norm(v2)\n",
+    "    dot_product = np.dot(v1,v2)\n",
+    "    cos_ang_v1_v2 = dot_product/(norm_v1 * norm_v2)\n",
+    "    \n",
+    "    return cos_ang_v1_v2\n",
+    "\n",
+    "#Ejemlo de vectores\n",
+    "\n",
+    "v_1 = [1,2,3]\n",
+    "v_2 = [4,5,6]\n",
+    "\n",
+    "coseno_angulo(v_1,v_2)\n",
+    "coseno_angulo(vec3,vec4) #Del ejercicio anterior\n"
+   ]
   },
   {
    "attachments": {
@@ -232,7 +300,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Sólo podré hacer AxC y AxB\n",
+    "\n",
+    "A = np.array([[9,5,8,5],\n",
+    "     [6,6,3,6],\n",
+    "     [0,8,1,9]])\n",
+    "\n",
+    "B = np.array([[4,2],\n",
+    "     [2,2],\n",
+    "     [4,2],\n",
+    "     [3,3]])\n",
+    "\n",
+    "C = np.array([[-2,1,0],\n",
+    "     [-1,3,3]])\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -260,7 +345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
