--- a/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_01/Practica_Obligatoria/18_Practica_Obligatoria_Algebra_Numpy.ipynb
+++ b/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_01/Practica_Obligatoria/18_Practica_Obligatoria_Algebra_Numpy.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -239,12 +239,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Toy Story', 'Jumanji', 'Mortal Kombat', 'Pocahontas']\n"
+     ]
+    }
+   ],
    "source": [
     "#[Acción,  Aventura , Animación, Comedia, Romance] Le voy a asignar el valor 1 si está el género en la peli y 0 si no está. Así se puede crear una matriz donde cada peli tiene 5 elementos\n",
     "\n",
+    "peliculas = [\"Toy Story\", \"Jumanji\", \"Mortal Kombat\", \"Pocahontas\"]\n",
+    "print(peliculas)\n",
+    "peliculas_nuevas = peliculas.append(\"Wall_E\")\n",
     "#Toy_Story = [Aventura, Animación, Comedia]\n",
     "Toy_Story = np.array([0,1,1,1,0])\n",
     "#Jumanji = [Aventura]\n",
@@ -264,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +284,7 @@
      "text": [
       "1.7320508075688772 1.0\n",
       "1\n",
-      "0.5773502691896258\n"
+      "Similitud de coseno entre Toy Story y Jumanji: 0.577\n"
      ]
     }
    ],
@@ -293,44 +304,12 @@
     "dot_product_ToyStory_Jumanji = np.dot(Toy_Story, Jumanji)\n",
     "print(dot_product_ToyStory_Jumanji)\n",
     "\n",
-    "# Coseno del ángulo = producto escalar de los vectores / suma de normas de los vectores \n",
+    "# Coseno del ángulo = producto escalar de los vectores / multiplicación de normas de los vectores \n",
     "\n",
     "cos_ang_ToyStory_Jumanji = dot_product_ToyStory_Jumanji/(norm_Toy_Story * norm_Jumanji)\n",
-    "print(cos_ang_ToyStory_Jumanji)\n",
+    "print(f\"Similitud de coseno entre Toy Story y Jumanji: {round(cos_ang_ToyStory_Jumanji,3)}\")\n",
     "\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Similitud entre Toy Story y Jumanji: 0.5773502691896258\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "# Representar cada película como un vector\n",
-    "vector_toy_story = np.array([0, 1, 1, 1, 0])  # Aventura, Animación, Comedia\n",
-    "vector_jumanji = np.array([0, 1, 0, 0, 0])  # Aventura\n",
-    "vector_mortal_kombat = np.array([1, 1, 0, 0, 0])  # Acción, Aventura\n",
-    "vector_pocahontas = np.array([0, 0, 1, 0, 1])  # Animación, Romance\n",
-    "\n",
-    "# Calcular similitud del coseno manualmente usando las fórmulas proporcionadas\n",
-    "dot_product_toy_story_jumanji = np.dot(vector_toy_story, vector_jumanji)\n",
-    "norm_toy_story = np.linalg.norm(vector_toy_story)\n",
-    "norm_jumanji = np.linalg.norm(vector_jumanji)\n",
-    "\n",
-    "cos_ang_toy_story_jumanji = dot_product_toy_story_jumanji / (norm_toy_story * norm_jumanji)\n",
-    "\n",
-    "# Mostrar resultado\n",
-    "print(f\"Similitud entre Toy Story y Jumanji: {cos_ang_toy_story_jumanji}\")\n"
    ]
   },
   {
@@ -344,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -395,10 +374,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Toy Story y Toy Story son la misma peli\n",
+      "Toy Story y Jumanji: 1.0\n",
+      "Toy Story y Mortal Kombat: 0.7071067811865475\n",
+      "Toy Story y Pocahontas: 0.7071067811865475\n",
+      "Jumanji y Toy Story: 0.5773502691896258\n",
+      "Jumanji y Jumanji son la misma peli\n",
+      "Jumanji y Mortal Kombat: 0.7071067811865475\n",
+      "Jumanji y Pocahontas: 0.0\n",
+      "Mortal Kombat y Toy Story: 0.5773502691896258\n",
+      "Mortal Kombat y Jumanji: 1.0\n",
+      "Mortal Kombat y Mortal Kombat son la misma peli\n",
+      "Mortal Kombat y Pocahontas: 0.0\n",
+      "Pocahontas y Toy Story: 0.5773502691896258\n",
+      "Pocahontas y Jumanji: 0.0\n",
+      "Pocahontas y Mortal Kombat: 0.0\n",
+      "Pocahontas y Pocahontas son la misma peli\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Se hace similitud del coseno de la matriz entera de películas. Para ello se hace el producto escalar de la propia matriz y de la propia matriz transpuesta (convertir filas en columnas).\n",
+    "similitudes = np.dot(matriz_peliculas, matriz_peliculas.T) / (np.linalg.norm(matriz_peliculas, axis=1))\n",
+    "# axis=1 especifica que queremos calcular las normas a lo largo del eje de las columnas que son las pelis.\n",
+    "\n",
+    "for i, pelicula1 in enumerate(peliculas):\n",
+    "    for j, pelicula2 in enumerate(peliculas):\n",
+    "        if i != j:\n",
+    "            print(f\"{pelicula1} y {pelicula2}: {similitudes[i][j]}\")\n",
+    "        else:\n",
+    "            print(f\"{pelicula1} y {pelicula2} son la misma peli\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[3 1 1 1]\n",
+      " [1 1 1 0]\n",
+      " [1 1 2 0]\n",
+      " [1 0 0 2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "nueva = np.dot(matriz_peliculas,matriz_peliculas.T)\n",
+    "print(nueva)\n",
+    "\n",
+    "#Aquí se verían los puntos en común de géneros (cada género en común suma un punto) entre películas"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -411,11 +447,91 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 1 1 0]\n",
+      " [0 1 0 0 0]\n",
+      " [1 1 0 0 0]\n",
+      " [0 0 1 0 1]\n",
+      " [0 1 1 1 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "Wall_E = np.array([0,1,1,1,0])\n",
+    "\n",
+    "#Para añadir un nuevo vector (pelicula) a la matriz ya existente:\n",
+    "\n",
+    "matriz_nueva = np.vstack([matriz_peliculas,Wall_E])\n",
+    "print(matriz_nueva)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Toy Story y Toy Story son la misma peli\n",
+      "Toy Story y Jumanji: 1.0\n",
+      "Toy Story y Mortal Kombat: 0.7071067811865475\n",
+      "Toy Story y Pocahontas: 0.7071067811865475\n",
+      "Toy Story y Wall_E: 1.7320508075688774\n",
+      "Jumanji y Toy Story: 0.5773502691896258\n",
+      "Jumanji y Jumanji son la misma peli\n",
+      "Jumanji y Mortal Kombat: 0.7071067811865475\n",
+      "Jumanji y Pocahontas: 0.0\n",
+      "Jumanji y Wall_E: 0.5773502691896258\n",
+      "Mortal Kombat y Toy Story: 0.5773502691896258\n",
+      "Mortal Kombat y Jumanji: 1.0\n",
+      "Mortal Kombat y Mortal Kombat son la misma peli\n",
+      "Mortal Kombat y Pocahontas: 0.0\n",
+      "Mortal Kombat y Wall_E: 0.5773502691896258\n",
+      "Pocahontas y Toy Story: 0.5773502691896258\n",
+      "Pocahontas y Jumanji: 0.0\n",
+      "Pocahontas y Mortal Kombat: 0.0\n",
+      "Pocahontas y Pocahontas son la misma peli\n",
+      "Pocahontas y Wall_E: 0.5773502691896258\n",
+      "Wall_E y Toy Story: 1.7320508075688774\n",
+      "Wall_E y Jumanji: 1.0\n",
+      "Wall_E y Mortal Kombat: 0.7071067811865475\n",
+      "Wall_E y Pocahontas: 0.7071067811865475\n",
+      "Wall_E y Wall_E son la misma peli\n"
+     ]
+    }
+   ],
+   "source": [
+    "        #NO PUEDO HACER UN peliculas.append(\"Wall_E\") NO PARA DE DARME ERROR Y SALIDA 'NONE'\n",
+    "\n",
+    "peliculas_nuevas = [\"Toy Story\", \"Jumanji\",\"Mortal Kombat\", \"Pocahontas\", \"Wall_E\"]\n",
+    "\n",
+    "# Se hace similitud del coseno de la matriz entera de películas. Para ello se hace el producto escalar de la propia matriz y de la propia matriz transpuesta (convertir filas en columnas).\n",
+    "similitudes = np.dot(matriz_nueva, matriz_nueva.T) / (np.linalg.norm(matriz_nueva, axis=1))\n",
+    "# axis=1 especifica que queremos calcular las normas a lo largo del eje de las columnas que son las pelis.\n",
+    "\n",
+    "for i, pelicula1 in enumerate(peliculas_nuevas):\n",
+    "    for j, pelicula2 in enumerate(peliculas_nuevas):\n",
+    "        if i != j:\n",
+    "            print(f\"{pelicula1} y {pelicula2}: {similitudes[i][j]}\")\n",
+    "        else:\n",
+    "            print(f\"{pelicula1} y {pelicula2} son la misma peli\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Wall_E = [0,1,1,1,0]\n"
+    "#NO ENTIENDO QUE ME DEN VALORES POR ENCIMA DE 1"
    ]
   }
  ],
