--- a/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_02/Ejercicios_Workout/10_Ejercicios_Array.ipynb
+++ b/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_02/Ejercicios_Workout/10_Ejercicios_Array.ipynb
@@ -69,10 +69,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.26.4'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.__version__"
+   ]
   },
   {
    "attachments": {
@@ -97,10 +111,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4 5 6 7 8 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_array = np.arange(10)\n",
+    "print(my_array)"
+   ]
   },
   {
    "attachments": {
@@ -125,10 +150,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ True  True  True]\n",
+      " [ True  True  True]\n",
+      " [ True  True  True]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "array_3x3 = np.full((3, 3), True, dtype=bool)\n",
+    "\n",
+    "print(array_3x3)"
+   ]
   },
   {
    "attachments": {
@@ -153,10 +192,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 3 5 7 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Crear un array booleano que indica qué elementos son impares\n",
+    "impares = my_array % 2 != 0\n",
+    "\n",
+    "# Utilizar la indexación booleana para extraer los elementos impares\n",
+    "impares_array = my_array[impares]\n",
+    "\n",
+    "print(impares_array)"
+   ]
   },
   {
    "attachments": {
@@ -181,10 +236,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0, -1,  2, -1,  4, -1,  6, -1,  8, -1])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.where(impares, -1, my_array)"
+   ]
   },
   {
    "attachments": {
@@ -209,10 +277,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1],\n",
+       "       [2, 3],\n",
+       "       [4, 5],\n",
+       "       [6, 7],\n",
+       "       [8, 9]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_array.reshape(5,2)"
+   ]
   },
   {
    "attachments": {
@@ -238,10 +323,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4  5]\n",
+      " [ 6  7  8  9 10]\n",
+      " [11 12 13 14 15]\n",
+      " [16 17 18 19 20]]\n",
+      "[[16 17 18 19 20]\n",
+      " [11 12 13 14 15]\n",
+      " [ 6  7  8  9 10]\n",
+      " [ 1  2  3  4  5]]\n",
+      "[[20 19 18 17 16]\n",
+      " [15 14 13 12 11]\n",
+      " [10  9  8  7  6]\n",
+      " [ 5  4  3  2  1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "matriz = np.arange(1, 21).reshape(4, 5)\n",
+    "\n",
+    "print(matriz)\n",
+    "\n",
+    "matriz_cambiada = matriz[::-1, :]\n",
+    "print(matriz_cambiada)\n",
+    "\n",
+    "\n",
+    "# Invertir totalmente la matriz (tanto filas como columnas)\n",
+    "matriz_invertida = np.flip(np.flip(matriz, axis=0), axis=1)\n",
+    "\n",
+    "print(matriz_invertida)\n"
+   ]
   },
   {
    "attachments": {
@@ -271,10 +388,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2],\n",
+       "       [6, 7]])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matriz[:2,:2]"
+   ]
   },
   {
    "attachments": {
@@ -303,9 +434,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  3,  5],\n",
+       "       [11, 13, 15]])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matriz[0::2, 0::2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
@@ -340,10 +490,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[17 17 15 15 17 15]\n",
+      "  [19 16 11 18 19 19]]\n",
+      "\n",
+      " [[12 19 16 15 11 10]\n",
+      "  [14 18 15 18 13 14]]\n",
+      "\n",
+      " [[19 12 14 11 16 17]\n",
+      "  [11 19 14 18 18 12]]\n",
+      "\n",
+      " [[16 10 14 11 10 19]\n",
+      "  [15 12 19 10 12 11]]\n",
+      "\n",
+      " [[18 19 19 14 10 19]\n",
+      "  [12 17 17 12 17 18]]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x =np.random.randint(10, 20, size = (5,2,6))\n",
+    "print(x)\n",
+    "x.ndim\n",
+    "x.size\n",
+    "x[0].size"
+   ]
   },
   {
    "attachments": {
@@ -373,6 +560,68 @@
     "\n",
     "Resuélvelo de dos maneras diferentes"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Loro' 'Perro' 'Gato' 'Loro' 'Perro']\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.array([\"Loro\", \"Perro\", \"Gato\", \"Loro\", \"Perro\"])\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Loro' 'Loro']\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = x[x== \"Loro\"]\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Loro' 'Loro']\n"
+     ]
+    }
+   ],
+   "source": [
+    "loros = x[np.where(x == \"Loro\")]\n",
+    "\n",
+    "print(loros)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -391,7 +640,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.11"
   },
   "vscode": {
    "interpreter": {
